<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="clear">C</string>
    <string name="_0">0</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
    <string name="equals">=</string>
    <string name="divide">÷</string>
    <string name="percent">%</string>
    <string name="squareRoot">√</string>
    <string name="decimal">.</string>
    <string name="negative">+/-</string>
    <string name="title_activity_main_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Alert Message</string>
    <string name="code_header">Secret Codes</string>
    <string name="contacts_header">Contacts</string>

    <!-- Messages Preferences -->
    <string name="name_title">Your Name</string>
    <string name="custom_message_title">Custom Message</string>

    <!-- Coordinate Preferences Preferences -->
    <string name="attach_coords">Attach Coordinates to Message</string>

    <!-- Code Preferences -->
    <string name="sos_code_title">SOS Code</string>
    <string name="settings_code_title">Settings Code</string>

    <!-- Emergency Contact Header -->
    <string name="contact1">Emergency Contact 1</string>
    <string name="contact2">Emergency Contact 2</string>
    <string name="contact3">Emergency Contact 3</string>
    <string name="contact4">Emergency Contact 4</string>
    <string name="contact5">Emergency Contact 5</string>
</resources>